==> Wielebny666/ESP32_LORA32/lib/lora/sx1276/sx1276.c <==
#include <math.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/timers.h"
#include "../include/board.h"
#include "radio.h"
#include "sx1276.h"
#include "../include/sx1276-board.h"
#define RSSI_OFFSET_LF -164
#define RSSI_OFFSET_HF -157

void SX1276Init(RadioEvents_t *events)
{
    ESP_LOGD(TAG, "%s", __FUNCTION__);

    uint8_t i;

    RadioEvents = events;

    // Initialize driver timeout timers
    TimerInit(&TxTimeoutTimer, 0, "TxTimeoutTimer", SX1276OnTimeoutIrq);
    TimerInit(&RxTimeoutTimer, 1, "RxTimeoutTimer", SX1276OnTimeoutIrq);
    TimerInit(&RxTimeoutSyncWord, 2, "RxTimeoutSyncWord", SX1276OnTimeoutIrq);

    SX1276Reset();

    RxChainCalibration();

    SX1276SetOpMode(RF_OPMODE_SLEEP);

    SX1276IoIrqInit(DioIrq);

    for (i = 0; i < sizeof(RadioRegsInit) / sizeof(RadioRegisters_t); i++)
    {
        SX1276SetModem(RadioRegsInit[i].Modem);
        SX1276Write(RadioRegsInit[i].Addr, RadioRegsInit[i].Value);
    }

    SX1276SetModem(MODEM_FSK);

    SX1276.Settings.State = RF_IDLE;
}

bool SX1276IsChannelFree(RadioModems_t modem, uint32_t freq, int16_t rssiThresh, uint32_t maxCarrierSenseTime)
{
    bool status = true;
    int16_t rssi = 0;
    TickType_t carrierSenseTime = 0;

    SX1276SetModem(modem);

    SX1276SetChannel(freq);

    SX1276SetOpMode(RF_OPMODE_RECEIVER);

    vTaskDelay(1 / portTICK_PERIOD_MS);

    carrierSenseTime = xTaskGetTickCount();

    // Perform carrier sense for maxCarrierSenseTime
    while ((xTaskGetTickCount() - carrierSenseTime) / portTICK_PERIOD_MS < (maxCarrierSenseTime / portTICK_PERIOD_MS))
    {
        rssi = SX1276ReadRssi(modem);

        if (rssi > rssiThresh)
        {
            status = false;
            break;
        }
    }
    SX1276SetSleep();
    return status;
}

void SX1276Send(uint8_t *buffer, uint8_t size)
{
    ESP_LOGD(TAG, "%s", __FUNCTION__);
    ESP_LOGD(TAG, "Modem type %s", (SX1276.Settings.Modem == MODEM_FSK) ? "MODEM_FSK" : "MODEM_LORA");

    uint32_t txTimeout = 0;

    switch (SX1276.Settings.Modem)
    {
    case MODEM_FSK:
    {
        SX1276.Settings.FskPacketHandler.NbBytes = 0;
        SX1276.Settings.FskPacketHandler.Size = size;

        if (SX1276.Settings.Fsk.FixLen == false)
        {
            SX1276WriteFifo((uint8_t *)&size, 1);
        }
        else
        {
            SX1276Write(REG_PAYLOADLENGTH, size);
        }

        if ((size > 0) && (size <= 64))
        {
            SX1276.Settings.FskPacketHandler.ChunkSize = size;
        }
        else
        {
            memcpy(RxTxBuffer, buffer, size);
            SX1276.Settings.FskPacketHandler.ChunkSize = 32;
        }

        // Write payload buffer
        SX1276WriteFifo(buffer, SX1276.Settings.FskPacketHandler.ChunkSize);
        SX1276.Settings.FskPacketHandler.NbBytes += SX1276.Settings.FskPacketHandler.ChunkSize;
        txTimeout = SX1276.Settings.Fsk.TxTimeout;
    }
    break;
    case MODEM_LORA:
    {
        if (SX1276.Settings.LoRa.IqInverted == true)
        {
            SX1276Write(REG_LR_INVERTIQ, ((SX1276Read(REG_LR_INVERTIQ) & RFLR_INVERTIQ_TX_MASK & RFLR_INVERTIQ_RX_MASK) | RFLR_INVERTIQ_RX_OFF | RFLR_INVERTIQ_TX_ON));
            SX1276Write(REG_LR_INVERTIQ2, RFLR_INVERTIQ2_ON);
        }
        else
        {
            SX1276Write(REG_LR_INVERTIQ, ((SX1276Read(REG_LR_INVERTIQ) & RFLR_INVERTIQ_TX_MASK & RFLR_INVERTIQ_RX_MASK) | RFLR_INVERTIQ_RX_OFF | RFLR_INVERTIQ_TX_OFF));
            SX1276Write(REG_LR_INVERTIQ2, RFLR_INVERTIQ2_OFF);
        }

        SX1276.Settings.LoRaPacketHandler.Size = size;

        // Initializes the payload size
        SX1276Write(REG_LR_PAYLOADLENGTH, size);

        // Full buffer used for Tx
        SX1276Write(REG_LR_FIFOTXBASEADDR, 0);
        SX1276Write(REG_LR_FIFOADDRPTR, 0);

        // FIFO operations can not take place in Sleep mode
        if ((SX1276Read(REG_OPMODE) & ~RF_OPMODE_MASK) == RF_OPMODE_SLEEP)
        {
            SX1276SetStby();
            vTaskDelay(1 / portTICK_PERIOD_MS);
        }
        // Write payload buffer
        SX1276WriteFifo(buffer, size);
        txTimeout = SX1276.Settings.LoRa.TxTimeout;
    }
    break;
    }

    SX1276SetTx(txTimeout);
}

void SX1276SetOpMode(uint8_t opMode)
{
    ESP_LOGD(TAG, "%s", __FUNCTION__);

    SX1276Write(REG_OPMODE, (SX1276Read(REG_OPMODE) & RF_OPMODE_MASK) | opMode);
}
